# BEducation-Practice

./: pyproject.toml
src/: config.py  database.py  exceptions.py
src/model/: ORM-models.py
